Bug 355069 - Notification animate to bottom from top.
Summary: Notification animate to bottom from top.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Martin Klapetek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-09 06:19 UTC by Bhushan Shah
Modified: 2015-12-14 12:53 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhushan Shah 2015-11-09 06:19:24 UTC
Somehow with recent master, Notifications animate from top to bottom and it is quite annoying/distracting.

Reproducible: Always
Comment 1 Martin Klapetek 2015-11-09 15:09:49 UTC
Interesting, there were no changes in notifications code at all, so must be something else that has influence on it.
Comment 2 Martin Klapetek 2015-11-20 22:37:16 UTC
Ok I've spent considerable amount of time bisecting things all the way to 5.4.0/5.14, but it happens even there, so I believe this is a Qt change (I had 5.4 before and couldn't reproduce, now with 5.5.x I can).

I'll try to change the location-setting code to be better.
Comment 3 Martin Klapetek 2015-12-03 04:11:44 UTC
Git commit 4a6f7db0018a2a7366ac7f2ad61fc33f31566c03 by Martin Klapetek.
Committed on 03/12/2015 at 04:10.
Pushed by mklapetek into branch 'Plasma/5.5'.

[notifications] Rework the notifications positioning a bit

The notifications popup positioning recently regressed
by some other changes (looks like Qt) and the popups
would fly across the screen.

The proper solution is using KWin effect but given how
close the release is, this needs to be dealt with in a
different way.

The main problem is calculating the initial popup size
because as long as the Dialog is invisible, it has an
incorrect geometry, so it needs to be positioned right
after it's being displayed. The Dialog however gets the
sizes even later, so the code now calls a slot from Dialog
that ensures the sizes are correct before the initial
placement on screen. It's not ideal but I'm out of ideas
otherwise. Plus it should be only temporary until the
KWin effect will replace it.

Besides that, it moves the custom position handling from the
QML into the C++ applet class, making it easier.

REVIEW: 126221
FIXED-IN: 5.5.0

M  +28   -3    applets/notifications/lib/notificationsapplet.cpp
M  +4    -1    applets/notifications/lib/notificationsapplet.h
M  +1    -19   applets/notifications/package/contents/ui/Notifications.qml
M  +49   -8    applets/notifications/plugin/notificationshelper.cpp
M  +2    -0    applets/notifications/plugin/notificationshelper.h

http://commits.kde.org/plasma-workspace/4a6f7db0018a2a7366ac7f2ad61fc33f31566c03